# pgkube

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
