[package]
name = "pgkube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Cargo.toml
#[[bin]]
#name = "crdgen"
#path = "src/bin/crdgen.rs"

#[[bin]]
#name = ""
#path = "src/bin/crdgen.rs"

[dependencies]
kube = { version = "3.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.0", features = ["v1_33", "schemars"] }
garde = { version = "0.22.1", default-features = false, features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["json","env-filter"] }
schemars = { version = "1" }
tokio = { version = "1.49.0", features = ["tracing", "full"] }
serde_json = "1.0.149"
serde_yaml = "0.9.29"
futures = "0.3.30"
thiserror = "2.0.18"
